@@ -1,1 +1,1 @@
-DIST firewall-mv-6.9.tar.gz 11667 SHA256 044acf63f64c6e9531912b8fb82fde2d3a1448b29ddaf8fb140ca5b65ea8ea59 SHA512 a92d2b813adfc1c12b1183aed24f17c2e07e1e64e7a49205bbdf49ff1665cd8fa919d00ac66d4ed496961b66cb1f0d1cba8da2f11b2786a8a78bbf915c72170a WHIRLPOOL 5df50d614d0665c1c4b03227863d4fe147a6c9349ac11d8e0fdef6b451f18bf44489a71518573defd1f7089899f906ae3a1d19d1d3e4170d2b9e7a10638b688c
+DIST firewall-mv-6.10.tar.gz 11988 SHA256 6861bcd1d9e1436b6f7884db108a0332b8a6acf4be858d82dd333bdcdcbb685f SHA512 583b8cd7fdd43f36eb99805d59e90704cc711dbf63c2acd108e0b1a341b69ebb8973c879bd83f18598216b7524b0c9319ea22b0223c9d1834900c3b8bb1fd93e WHIRLPOOL b4ec2d1a328760e3fb08e75f0fae1c0ec2543c120c2f0978f3fedb114f4e8d307fd9dcdab6757af8bb2cc2d0948794851b4f99d9392bc6e914326d8f087f4922
