@@ -1,1 +1,1 @@
-DIST squash_dir-12.10.tar.gz 29087 SHA256 20009cba5e9d6cf21acb1136273e2d05966f4234412e6e41dc00bb5bdae58f4d SHA512 7a20a8505b92d17228dd56cbdd5c49f431a577772c3a6f193408072ecea528a207e35ef7deb9a9db65706deab634f7593d4c7fed186a8f71b77aa9b5d7d41dbd WHIRLPOOL 581aa90f2d2fa508c6951aa9984e3ccab0f78506de5e5486868a73069e9efbd1e43c487c81b6fc24c4fce9ca09dbf2d7f392b5c96005bb8ee98ba2b8e770a71d
+DIST squash_dir-13.0.tar.gz 30660 SHA256 ed915083a5b50456077648adad9626a84309486f43b470f25907762f8e66fbcd SHA512 73efe1c20c9800d4c5b2bbce8e3d31ad59ecb062a1513be87bc7d9461e42ff10327e74cea3077c8696ce8c030a1fc0135cc7190d85c5b2bed59afd9f4de51e87 WHIRLPOOL e17670871737ae8141029cfb74bc7cfc6955b55056b6313081675bfe12edf50f90aedb96e65232b99ecc825144f1469be15a0bdbb42c9133b81d192294968103
