@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*firewall-mv-6.10 (10 Aug 2013)
+
+  10 Aug 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Support systemd
+
 *firewall-mv-6.9 (09 May 2013)
 
   09 May 2013; Martin Väth <martin@mvath.de>:
